Fri Feb 24 09:18:00 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/orbconf.h:
          If ZIOP is not defined and we have messaging, set it to 0

Thu Feb 23 19:08:43 UTC 2012  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/ImplRepo_Service/ImR_Locator_i.cpp:
          Differentiate a connection timeout vs message timeout when checking
          to see if a server is alive. On some Windows platforms at least, a
          dead server does not result in a TRANSIENT exception as one would
          expect, rather the connection attempt simply times out. Since the
          IMR already assumes that a TIMEOUT was due to a server simply being
          busy but otherwise alive, it was incorrectly assuming a dead server
          was really alive, and forwarding the client to a bogus endpoint.

Thu Feb 23 18:13:22 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/CosEvent/CEC_ProxyPushSupplier.cpp:
          Applied patch from Thomas Lockhart for a problem when
          TAO_HAS_CORBA_MESSAGING is non-zero and TAO_HAS_TYPED_EVENT_CHANNEL
          is undefined

        * tao/PortableServer/Operation_Table.h:
          Exported a struct from the dll

Thu Feb 23 12:30:56 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/rlecompressor.mpb:
          Fuzz fix

Thu Feb 23 08:06:40 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/orbconf.h:
          ZIOP depends on messaging

Thu Feb 23 08:00:29 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/rlecompressor.mpb:
        * tao/Compression/rle/RLECompressor.cpp:
        * tao/Compression/rle/RLECompressor.mpc:
        * tao/Compression/rle/RLECompressor_Factory.cpp:
        * tao/Compression/rle/TAO_RLECompressor.rc:
        * tests/Compression/RLECompressorTest.cpp:
          Updated for the move of the rle compressor to a new ACE library

        * tao/AnyTypeCode/Any.cpp: