@@ -24,20 +24,33 @@
 #include "tao/Compression/Compression.h"
 #include "tao/Compression/Compressor_Factory.h"
 
+#include "ace/Copy_Disabled.h"
+
+#include <map>
+
 TAO_BEGIN_VERSIONED_NAMESPACE_DECL
 
 namespace TAO
 {
     class TAO_ZLIBCOMPRESSOR_Export Zlib_CompressorFactory :
-      public ::TAO::CompressorFactory
+      public ::TAO::CompressorFactory,
+      private ACE_Copy_Disabled
     {
-      public:
+      typedef std::map< ::Compression::CompressionLevel,
+          const ::Compression::Compressor_var> ZlibCompressorMap;
+
+    public:
+
         Zlib_CompressorFactory (void);
 
         virtual ::Compression::Compressor_ptr get_compressor (
             ::Compression::CompressionLevel compression_level);
-       private:
-         ::Compression::Compressor_var compressor_;
+
+    private:
+
+        // Ensure we can lock with imutability (i.e. const)
+        mutable ACE_SYNCH_MUTEX mutex_;
+        ZlibCompressorMap       compressors_;
     };
 }
 
